--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,7 @@ dependencies:
   firebase_auth: ^3.3.11
   google_sign_in: ^5.2.4
   cloud_firestore: ^3.1.10
+  cached_network_image: ^3.2.0
 
 dev_dependencies:
   flutter_test:
