--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
   google_sign_in: ^5.2.4
   cloud_firestore: ^3.1.10
   cached_network_image: ^3.2.0
+  responsive_framework: ^0.2.0
 
 dev_dependencies:
   flutter_test:
